# Projet-TDLOG-ChessGame

./: Architecturecpp.puml  ChessGame_UML.puml  README.md  game.py  gameV2.py
TDLOG_ChessGame/: .gitignore  CMakeLists.txt  ai.cpp  ai.h  board.cpp  board.h  game.cpp  game.h  main.cpp  move.cpp  move.h  piece.cpp  piece.h  player.cpp  player.h  rules.h  variant.cpp  variant.h  variants.h
build-TDLOG_ChessGame-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake  test.at
build-TDLOG_ChessGame-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-1d173fe3d43901133995.json  cmakeFiles-v1-e4d157f6bea611ab6451.json  codemodel-v2-557fc659081cd1f59728.json  codemodel-v2-6e486b225940dc348607.json  codemodel-v2-8dc507dd48e1fa225dab.json  codemodel-v2-b5158525d6d1644c240d.json  codemodel-v2-e796bc6cbc01a8c9d8db.json  directory-.-Debug-704f54566a004693c0b4.json  directory-.-Debug-c2bbaeed002917b1004f.json  directory-.-Debug-fdff9b50034d4da8559c.json  index-2025-10-20T10-56-54-0709.json  index-2025-11-03T12-44-40-0785.json  index-2025-12-08T13-48-45-0667.json  target-TDLOG_ChessGame-Debug-38e7d1dc31daa2525787.json  target-TDLOG_ChessGame-Debug-3919aa53829a4ebfcc87.json  target-TDLOG_ChessGame-Debug-80156ada6d7613ade45d.json  target-TDLOG_ChessGame-Debug-d9ed8382852709668f40.json  target-TDLOG_ChessGame-Debug-eed2563b06ce8a295ade.json
build-TDLOG_ChessGame-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
(+160 files in other folders)
